--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,4 @@
-API_KEY=%API_KEY% -> https://app.gather.town/apikeys
-SPACE_ID=%SPACE_ID% -> https://app.gather.town/app/%SPACE_ID%/%SPACE_NAME%
+GATHER_API_KEY=YOUR_GATHER_API_KEY
+GATHER_SPACE_ID=YOUR_GATHER_SPACE_ID
 STATUS_UPDATE_INTERVAL=5000
 TEAMS_LOG_DURATION=10s
